# PredictCarPriceWithRegression

./: .gitignore  LICENSE  PORTFOLIO.md  README.md  SETUP.md  activate_env.bat  activate_env.sh  custom_transformers.py  dataCleanup.py  loadData.py  main.py  requirements-simple.txt  requirements.txt  setup.cfg
dataset/: .~lock.Data Dictionary - carprices.xlsx#
results/: README.md  sample_output.txt
