[metadata]
name = car-price-prediction
version = 1.0.0
author = ArnavGRao
author_email = arnavgrao@gmail.com
description = Portfolio project demonstrating machine learning skills with car price prediction using regression algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArnavGRao/PredictCarPriceWithRegression
project_urls =
    Bug Tracker = https://github.com/ArnavGRao/PredictCarPriceWithRegression/issues
    Documentation = https://github.com/ArnavGRao/PredictCarPriceWithRegression/blob/main/README.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Education :: Computer Aided Instruction (CAI)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.5.0
    numpy>=1.21.0
    scikit-learn>=1.1.0
    matplotlib>=3.5.0
    scipy>=1.9.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    black>=22.0.0
    flake8>=5.0.0
    jupyter>=1.0.0
    seaborn>=0.11.0
    plotly>=5.0.0

[options.entry_points]
console_scripts =
    car-price-predict = main:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts = -v --tb=short

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    .venv,
    .eggs,
    *.egg,
    build,
    dist

[coverage:run]
source = src
omit =
    */tests/*
    */__pycache__/*
    */venv/*
    */.venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
